[package]
name = "xmpp-rs"
version = "0.1.3"
description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""

license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-rs"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
repository = "https://github.com/Freyskeyd/xmpp-rs"
readme = "README.md"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]
exclude = [
    "derive",
]
[badges]
travis-ci = { repository = "freyskeyd/xmpp-rs", branch = "master" }

[lib]
name = "xmpp"
path = "src/lib.rs"

[dev-dependencies]
# elementtree = {git = "https://github.com/Freyskeyd/elementtree-rust"}
elementtree = "0"
env_logger = "0"
futures = "0.1"
log = "0"
tokio-core = "0.1"
xml-rs = {git = "https://github.com/Freyskeyd/xml-rs"}

[dependencies.xmpp-derive]
path = "./derive"
version = "0"

[dependencies.xmpp-proto]
path = "./proto"
version = "0"

[dependencies.xmpp-client]
path = "./client"
version = "0"

[workspace]
members = ["client/", "proto/", "server/", "derive/"]

