[package]
name = "xmpp-rs"
version = "0.1.3"
description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""

license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-rs"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
repository = "https://github.com/Freyskeyd/xmpp-rs"
readme = "README.md"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]
exclude = [
    "derive",
]
[badges]
travis-ci = { repository = "freyskeyd/xmpp-rs", branch = "master" }

[lib]
name = "xmpp"
path = "src/lib.rs"

[dev-dependencies]
env_logger = "0"
futures = "0.1"
log = "0"
tokio-core = "0.1"
xml-rs = {git = "https://github.com/Freyskeyd/xml-rs"}

[dependencies]
xmpp-client = { path = "client" }
xmpp-config = { path = "config" }
xmpp-credentials = { path = "credentials" }
xmpp-events = { path = "events" }
xmpp-proto = { path = "proto" }
jid = "0"
xmpp-derive = { path = "derive" }
xmpp-xml = { path = "xml" }

[workspace]
members = ["client/", "credentials/", "config/", "events/", "proto/", "server/", "derive/"]
