[package]
name = "xmpp-rs"
version = "0.1.3"
description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""

edition = "2018"
license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-rs"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
repository = "https://github.com/Freyskeyd/xmpp-rs"
readme = "README.md"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]
exclude = [
    "derive",
]
[badges]
travis-ci = { repository = "freyskeyd/xmpp-rs", branch = "master" }

[lib]
name = "xmpp"
path = "src/lib.rs"

[dev-dependencies]
env_logger = "0"
futures = "0.1"
log = "0"
tokio-core = "0.1"
xml-rs = {git = "https://github.com/Freyskeyd/xml-rs"}

[dependencies]
xmpp-credentials = { path = "credentials" }
xmpp-proto = { path = "proto" }
xmpp-server = { path = "server" }

[workspace]
members = ["proto", "credentials/", "server/", "examples/server"]
