[package]
name = "xmpp-client"
version = "0.1.2"
description = "A work in progress xmpp lib"
license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-client"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

[dependencies]
bytes = "0.4"
futures = "0"
tokio-io = "0"
tokio-core = "0"
tokio-tls = "0"
native-tls = "0"
base64 = "0.4.0"
sasl = "0.3.0"
log = "^0.3"

[dev-dependencies]
env_logger = "^0.4"

[dependencies.xmpp-proto]
path = "../proto"
version = "0"

