[package]
name = "xmpp-client"
version = "0.1.3"
license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-client"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""
repository = "https://github.com/Freyskeyd/xmpp-rs"
readme = "../README.md"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]

[dependencies]
futures = "0"
native-tls = "0"
tokio-core = "0"
tokio-io = "0"
tokio-tls = "0"

[dev-dependencies]
env_logger = "^0.4"

[dependencies.xmpp-proto]
path = "../proto"
version = "0"

