[package]
name = "xmpp-proto"
version = "0.1.3"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
documentation = "https://docs.rs/xmpp-proto"
edition = "2018"
license = "MPL-2.0"
description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""
repository = "https://github.com/Freyskeyd/xmpp-rs"
readme = "../README.md"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]

[dependencies]
# base64 = "0"
# bytes = "0"
# circular = "0"
# futures = "*"
# log = "0"
# native-tls = "0"
# tokio-core = "0"
# tokio-io = "0"
# tokio-tls = "0.1.2"
uuid = { version = "0.4", features = ["v4"] }
# xml-rs = {git = "https://github.com/Freyskeyd/xml-rs"}
# xmpp-derive = {path = "../derive", version = "0" }
# sasl = "0.4.1"
# clippy = {version = "*", optional = true}

xmpp-credentials = { path = "../credentials" }
jid = "0"
xmpp-xml = { path = "../xml" }

actix = { version = "0.11.0", default_feature = false }
circular = "*"
derive_builder = "0.9.0"
# xmpp-events = { path = "../events" }

[features]
default = []
