[package]
name = "xmpp-server"
version = "0.1.3"
license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-server"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""
repository = "https://github.com/Freyskeyd/xmpp-rs"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]

[dependencies]
