[package]
name = "xmpp-server"
version = "0.1.3"
license = "MPL-2.0"
documentation = "https://docs.rs/xmpp-server"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

edition = "2018"
description = """
xmpp-rs is an implementation of the Extensible Messaging and Presence Protocol (XMPP).

Based on tokio-rs and futures-rs. It's goal is to be fully tested and usable.
"""
repository = "https://github.com/Freyskeyd/xmpp-rs"
keywords = ["xmpp", "tokio", "jabber", "IM", "instant-messaging"]
categories = ["network-programming"]

[dependencies]
actix = { version = "0.12.0" }
actix-codec = "0.4.0-beta.1"
actix-http = { version = "3.0.0-beta.4", default-features = false }
actix-rt = { version = "2.2", default-features = false }
actix-service = "2.0.0-beta.5"
actix-tls = "3.0.0-beta.5"

# actix = "0.11.0"
# actix-tls = "*"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
# actix-web-actors = { git = "https://github.com/actix/actix-web" }
# actix-net = "*"
# actix-server = "*"
# actix-service = "*"
# actix-codec = "*"
byteorder = "*"
futures = "*"
futures-util = "*"
log = "*"
bytes = "1"
# byteorder = "1.3"
serde = "*"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
# # tokio = { version = "0.2" }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = "*"
uuid = { version = "0.4", features = ["v4"] }

circular = "*"
xml-rs = "*"
xmpp-xml = { path = "../xml" }
xmpp-proto = { path = "../proto" }
sasl = "*"

derive_builder = "0.10.0"

jid = "0"
config = "0.11"
async-trait ="*"
lazy_static = "1"
tower-service = "0.3.1"
base64 = "0.13.0"

[dev-dependencies]
demonstrate = "0.4.5"

[features]
default = ["auth_method_memory"]
auth_method_memory = []
auth_method_sql = []
