[package]
name = "server"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.3"
actix-web = "4.0.0-beta.4"
xmpp-server = {path = "../../server"}

env_logger = "*"
